--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "check-deployment": "node scripts/check-deployment.js"
+    "check-deployment": "node scripts/check-deployment.js",
+    "deploy": "node scripts/deploy-vercel.js",
+    "deploy:vercel": "vercel --prod --force"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
