--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "preview": "vite preview",
     "check-deployment": "node scripts/check-deployment.js",
     "deploy": "node scripts/deploy-vercel.js",
-    "deploy:vercel": "vercel --prod --force",
-    "test:login-performance": "node scripts/test_login_performance.js",
-    "test:login-comparison": "node scripts/test_login_comparison.js"
+    "deploy:vercel": "vercel --prod --force"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
