--- a/vercel.json
+++ b/vercel.json
@@ -61,15 +61,15 @@
       "destination": "/index.html"
     },
     {
-      "source": "/influencer/(.*)",
+      "source": "/influencer/:id",
       "destination": "/index.html"
     },
     {
-      "source": "/company/(.*)",
+      "source": "/company/:id",
       "destination": "/index.html"
     },
     {
-      "source": "/task/(.*)",
+      "source": "/task/:id",
       "destination": "/index.html"
     },
     {
@@ -92,8 +92,52 @@
         {
           "key": "Cache-Control",
           "value": "public, max-age=0, must-revalidate"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, POST, PUT, DELETE, OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type, Authorization"
+        }
+      ]
+    },
+    {
+      "source": "/influencer/:id",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=300, stale-while-revalidate=600"
+        }
+      ]
+    },
+    {
+      "source": "/company/:id",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=300, stale-while-revalidate=600"
+        }
+      ]
+    },
+    {
+      "source": "/task/:id",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=300, stale-while-revalidate=600"
         }
       ]
     }
-  ]
+  ],
+  "functions": {
+    "api/**/*.js": {
+      "maxDuration": 30
+    }
+  }
 } 
