--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,19 @@
 {
   "rewrites": [
     {
-      "source": "/api/influencer-detail",
+      "source": "/api/influencer-detail(.*)",
       "destination": "/api/influencer-detail"
     },
     {
-      "source": "/api/company-detail",
+      "source": "/api/company-detail(.*)",
       "destination": "/api/company-detail"
     },
     {
-      "source": "/api/task-detail",
+      "source": "/api/task-detail(.*)",
       "destination": "/api/task-detail"
     },
     {
-      "source": "/api/task-applications",
+      "source": "/api/task-applications(.*)",
       "destination": "/api/task-applications"
     },
     {
