--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "i18next": "^25.6.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-i18next": "^16.1.4",
     "react-router-dom": "^7.7.0"
   },
   "devDependencies": {
